DEVOPS-Finals/src/pro-one-monitor/pro-one-app.yml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: default
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
  selector:
    app: webapp

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pro-one-app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: demo.galkin.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-service
                port:
                  number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: default
  labels:
    app: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      name: webapp
      labels:
        app: webapp
    spec:
      containers:
      - name: pro-one-app
        image: cr.yandex/crp8jfk6aqukdh9003lb/pro-one-app:latest
        ports:
        - containerPort: 80
